--- a/views/modules/header.jade
+++ b/views/modules/header.jade
@@ -15,11 +15,11 @@ block append header
                                 li.social-list__item
                                     a.social-item__link.activeMenu(href='#')
                                         img(src='/images/header/flag.png', alt='')
-                                li.social-list__item
-                                    a.social-item__link(href='#')
-                                        img(src='/images/header/flag.png', alt='')
-                        .search
-                            input#seach(type='text', name='search', placeholder='Search ..')
+                                //- li.social-list__item
+                                //-     a.social-item__link(href='#')
+                                //-         img(src='/images/header/flag.png', alt='')
+                        //- .search
+                        //-     input#seach(type='text', name='search', placeholder='Search ..')
         .header-nav
             .bs-container
                 .nav-content.clearfix
@@ -34,16 +34,6 @@ block append header
                                 i.far.fa-window-close
                             ul.menu-list.clearfix
                                 li.menu-list__item
-                                    a.menu-list__link.active(href='index') TRANG CHU
+                                    a.menu-list__link.active(href='/') TRANG CHỦ
                                 li.menu-list__item
-                                    a.menu-list__link(href='contactt') GIOI THIEU
-                                li.menu-list__item
-                                    a.menu-list__link(href='service') LINH VUC
-                                li.menu-list__item
-                                    a.menu-list__link(href='product') DU AN
-                                li.menu-list__item
-                                    a.menu-list__link(href='#') TIN TUC
-                                li.menu-list__item
-                                    a.menu-list__link(href='#') TUYEN DUNG
-                                li.menu-list__item
-                                    a.menu-list__link(href='contacts') LIEN HE
+                                    a.menu-list__link(href='contacts') LIÊN HỆ
