--- a/public/stylesheets/pages/index.css
+++ b/public/stylesheets/pages/index.css
@@ -266,8 +266,8 @@
     color: #1fd392;
     font-weight: bold;
     font-family: "avo_bold", sans-serif;
-    bottom: -162px;
-    right: -5px;
+    bottom: -90px;
+    right: -285px;
     -webkit-text-fill-color: white;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #1fd392;
@@ -643,8 +643,6 @@
     position: absolute;
     width: 300px;
     height: 300px;
-    animation: rotate 16s linear infinite;
-    animation-delay: 3.2s;
 }
 .section-activity .module .module-content .img .round .transform .rotateLine img {
     width: 100%;
@@ -797,7 +795,7 @@
 }
 .section-project .module .module-content .tab-content .grpBtn {
     text-align: right;
-    margin-top: 42px;
+    margin-bottom: 42px;
 }
 .section-project .module .module-content .tab-content .grpBtn .prev {
     padding: 6px 10px 11px;
@@ -817,6 +815,9 @@
     cursor: pointer;
 }
 .section-project .module .module-content .tab-content .wrapper .img {
+    width: 260px;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     padding-bottom: 120%;
     overflow: hidden;
@@ -827,7 +828,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 80%;
     -o-object-fit: cover;
     object-fit: cover;
 }
@@ -851,7 +852,7 @@
     margin-bottom: 0;
     position: relative;
 }
-.section-project .module .module-content .tab-content .wrapper .desc .building:after {
+/* .section-project .module .module-content .tab-content .wrapper .desc .building:after {
     position: absolute;
     content: "";
     background-image: url("./../../images/homepage/more.png");
@@ -863,7 +864,7 @@
     bottom: -50px;
     transform: scale(0);
     transform-origin: center;
-}
+} */
 .section-project .module .module-content .tab-content .wrapper .desc .business {
     font-size: 13px;
     line-height: 19px;
@@ -924,8 +925,8 @@
     margin-left: 14px;
 }
 .section-recruit .module .module-content .header button {
-    width: 180px;
-    height: 60px;
+    width: 140px;
+    height: 40px;
     border-radius: 30px;
     filter: drop-shadow(0px 15px 17.5px rgba(31, 211, 146, 0.45));
     background-color: #1fd392;
@@ -1236,8 +1237,9 @@
     color: #1fd392;
     font-weight: 700;
     font-family: "avo_bold", sans-serif;
-    bottom: -55px;
-    right: -96px;
+    bottom: 0px;
+    right: -345px;
+    transform: rotate(90deg);
     letter-spacing: 2px;
     -webkit-text-fill-color: #fff;
     -webkit-text-stroke-width: 1px;
@@ -1435,11 +1437,23 @@
     height: 88px;
 }
 .section-partner .module-content .images .img {
+    width: 146px;
+    height: 91px;
     display: inline-block;
     padding: 11px 17px;
     margin: 0px 30px 30px;
     box-shadow: 0px 10px 15px rgba(23, 48, 92, 0.2);
     background: white;
+    position: relative;
+}
+.section-partner .module-content .images .img img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
 }
 .section-partner .module-content .images .showMore {
     position: absolute;
