--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block append content
                 .module-header
                   h2.title=sectionBanner.title
                   p=sectionBanner.desc
-                  button XEM THEM
+                  //- button XEM THEM
       .filter
         section.section-about
           .bs-container
@@ -28,7 +28,7 @@ block append content
                         .header(data-aos='flip-right')
                           h2.title=sectionAbout.title
                           p=sectionAbout.desc
-                          button XEM THEM
+                          //- button XEM THEM
                           span.effectTitle ABOUT US
         section.section-activity
           .bs-container
@@ -223,9 +223,9 @@ block append content
                             img(src='/images/homepage/recruitment-img/layer_main.gif', alt='')
                     .bs-col.md-50-15
                       .header(data-aos='zoom-in-down')
-                        h2.title=sectionRecruit.name
+                        h2.title=sectionRecruit.title
                         p=sectionRecruit.desc
-                        button NOP DON &gt;&gt;
+                        //- button Nộp đơn &gt;&gt;
                         span.effectTitle RECRUITMENT
       section.section-new
         .bs-container
@@ -246,23 +246,15 @@ block append content
                               p.time 5. december.2020
                               p.views 328
                             p.content=item.title
-                            button Xem thEm
-                  button.seeMore XEM TIEP
+                            //- button Xem thêm
                   span.effectTitle LATEST NEWS
       section.section-partner
         .module.module-partner
           .module-content(data-aos='flip-up')
-            h2.title=sectionPartner.name
+            h2.title=sectionPartner.title
             div.images
-              .img
-                img(src='/images/homepage/vin.png', alt='')
-              .img
-                img(src='/images/homepage/vin.png', alt='')
-              .img
-                img(src='/images/homepage/vin.png', alt='')
-              .img
-                img(src='/images/homepage/vin.png', alt='')
-              .img
-                img(src='/images/homepage/vin.png', alt='')
+              each item in partners
+                .img
+                  img(src=item.image)
               button.showMore &raquo;
     include ./modules/footer.jade
