--- a/views/modules/header-sc.jade
+++ b/views/modules/header-sc.jade
@@ -10,40 +10,30 @@ block append header-sc
                             i.far.fa-caret-square-down
                         .social-item.item-language
                             p.title
-                            img(src='/images/header/flag.png', alt='')
+                                img(src='/images/header/flag.png', alt='')
                             ul.social-list
                                 li.social-list__item
                                     a.social-item__link(href='#')
-                                    img(src='/images/header/flag.png', alt='')
-                                li.social-list__item
-                                    a.social-item__link(href='#')
-                                    img(src='/images/header/flag.png', alt='')
-                        .search
-                            input#seach(type='text', name='search', placeholder='Search ..')
-    .header-nav
-        .bs-container
-            .nav-content.clearfix
-                .logo
-                    a(href='#')
-                        img(src='/images/header/logo.png', alt='')
-                .nav
-                    span.show__menu
-                        i.fas.fa-bars
-            .menu
-                span.close__menu
-                i.far.fa-window-close
-                ul.menu-list.clearfix
-                li.menu-list__item
-                    a.menu-list__link.active(href='index') TRANG CHU
-                li.menu-list__item
-                    a.menu-list__link(href='contactt') GIOI THIEU
-                li.menu-list__item
-                    a.menu-list__link(href='service') LINH VUC
-                li.menu-list__item
-                    a.menu-list__link(href='product') DU AN
-                li.menu-list__item
-                    a.menu-list__link(href='#') TIN TUC
-                li.menu-list__item
-                    a.menu-list__link(href='#') TUYEN DUNG
-                li.menu-list__item
-                    a.menu-list__link(href='contacts') LIEN HE
+                                        img(src='/images/header/flag.png', alt='')
+                                //- li.social-list__item
+                                //-     a.social-item__link(href='#')
+                                //-         img(src='/images/header/flag.png', alt='')
+                        //- .search
+                        //-     input#seach(type='text', name='search', placeholder='Search ..')
+        .header-nav
+            .bs-container
+                .nav-content.clearfix
+                    .logo
+                        a(href='#')
+                            img(src='/images/header/logo.png', alt='')
+                    .nav
+                        span.show__menu
+                            i.fas.fa-bars
+                        .menu
+                            span.close__menu
+                                i.far.fa-window-close
+                            ul.menu-list.clearfix
+                                li.menu-list__item
+                                    a.menu-list__link.active(href='/') TRANG CHỦ
+                                li.menu-list__item
+                                    a.menu-list__link(href='contacts') LIÊN HỆ
